# trust-server

./: .gitignore  .gitmodules  Dockerfile  README.md  get_jwt_token.sh  sss-setup.md
.github/workflows/: build-and-publish.yml
src/: config.js  keys.json  package-lock.json  package.json  server.js  services.js  whitelist.csv
sss-tool/: Cargo.toml
sss-tool/src/: main.rs
sss_tool/: Cargo.toml
sss_tool/src/: main.rs
verifiers/amd/amd-verifier/: Cargo.toml
verifiers/amd/amd-verifier/src/: main.rs
verifiers/amd/attestation-verification/: Cargo.toml
verifiers/amd/attestation-verification/src/: certs.rs  error.rs  lib.rs  verify.rs
