[package]
name = "sss-tool"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
aes-siv = "0.5"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.7.3"
curve25519-dalek = "=3.2.1"
ed25519-dalek = "=1.0.1"
ed25519 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
