[package]
name = "amd-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "string", "env"] }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

attestation-verification = { path = "../attestation-verification" }
sev = "7.1.0"

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
