[package]
name = "attestation-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
openssl = { version = "^0.10" }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = "1.0.228"
sev = { version = "7.1.0", features = ["openssl"] }

thiserror = "2.0"
tracing = "0.1"
x509-parser = { version = "0.18", features = ["verify"] }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
